.metadata/.plugins/org.eclipse.cdt.ui/615-674-Coin Change.build.log

**** Build of configuration Debug for project 615-674-Coin Change ****

make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
../main.cpp:6:36: error: scalar object ‘ARR’ requires one element in initializer
 const int ARR = { 50, 25, 10, 5, 1 };
                                    ^
make: *** [main.o] Error 1

**** Build Finished ****
